wip error dialog

--- a/nym-vpn-x/src/error.html
+++ b/nym-vpn-x/src/error.html
@@ -12,7 +12,7 @@
   <body class="h-screen overflow-hidden">
     <div
       id="root"
-      class="h-full font-sans flex flex-col min-w-64 bg-baltic-sea text-mercury-pinkish"
+      class="h-full font-sans flex flex-col min-w-64 bg-white dark:bg-oil text-baltic-sea dark:text-mercury-pinkish"
     ></div>
     <script type="module" src="/src/error.tsx"></script>
   </body>
