--- a/nym-vpn-app/index.html
+++ b/nym-vpn-app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="text-[14px] tracking-wide">
+<html lang="en" class="text-[14px] antialiased font-rendering tracking-wide">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/nym.svg" />
