--- a/nym-vpn-app/index.html
+++ b/nym-vpn-app/index.html
@@ -14,13 +14,13 @@
     <!-- ----------- SPLASH SCREEN ----------- -->
     <!-- It is automatically removed from DOM
      once the initial loading phase is done -->
-    <div id="splash" class="dark">
+    <div id="splash">
       <div
         class="h-full w-full absolute z-[100] font-sans flex justify-center items-center text-[32px] tracking-widest bg-white dark:bg-baltic-sea overflow-hidden transition-opacity duration-150"
       >
         <div
           id="splash-logo"
-          class="flex justify-center items-center opacity-0 transition-opacity duration-75 ease-in"
+          class="flex justify-center items-center opacity-0 transition-opacity duration-150 ease-in"
         >
           <div class="flex flex-col justify-center items-center gap-8">
             <!-- circles union LOGO -->
@@ -37,7 +37,7 @@
               />
             </svg>
 
-            <div class="flex justify-center gap-2">
+            <div class="flex justify-center gap-2 flex-nowrap">
               <!-- NYM -->
               <svg
                 class="fill-baltic-sea dark:fill-white"
